Alterações nos cadastros, para inclusão de novas regras de negócio.

--- a/LocadoraVeiculos/LocadoraVeiculos.csproj
+++ b/LocadoraVeiculos/LocadoraVeiculos.csproj
@@ -170,7 +170,9 @@
     <Compile Include="Models\Funcionario.cs" />
     <Compile Include="Models\Pagamentos.cs" />
     <Compile Include="Models\StatusAluguel.cs" />
+    <Compile Include="Models\StatusCadastro.cs" />
     <Compile Include="Models\StatusCarro.cs" />
+    <Compile Include="Models\TipoAcessoFuncionario.cs" />
     <Compile Include="Models\TipoCarro.cs" />
     <Compile Include="Models\TipoCliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
