--- a/WebServiceClientes/WebServiceClientes/WebServiceClientes.csproj
+++ b/WebServiceClientes/WebServiceClientes/WebServiceClientes.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Infra\Context.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CustomerModel.cs" />
